This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Some old preprocessors have problem with "#define" not in the first column
Type: compile error Stage: resolved
Components: Versions: Python 3.2, Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: jcea Nosy List: jcea, python-dev
Priority: normal Keywords:

Created on 2011-11-27 04:15 by jcea, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (2)
msg148440 - (view) Author: Jesús Cea Avión (jcea) * (Python committer) Date: 2011-11-27 04:15
While working in dtrace probes, I have discovered that some old C preprocessors don't recognize "#define" if not in the first column.

File "Include/dynamic_annotations.h" has quite a few indented "#define". This is neither necessary neither regular practice in other files.

I delete the extra unneeded spaces.
msg148441 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2011-11-27 04:17
New changeset 05979ae431fb by Jesus Cea in branch '3.2':
Closes issue #13488: Some old preprocessors have problem with #define not in the first column
http://hg.python.org/cpython/rev/05979ae431fb

New changeset 3a44640682c3 by Jesus Cea in branch 'default':
MERGE: Closes issue #13488: Some old preprocessors have problem with #define not in the first column
http://hg.python.org/cpython/rev/3a44640682c3
History
Date User Action Args
2022-04-11 14:57:24adminsetgithub: 57697
2011-11-27 04:18:28jceasetstatus: open -> closed
resolution: fixed
stage: resolved
2011-11-27 04:17:37python-devsetnosy: + python-dev
messages: + msg148441
2011-11-27 04:16:15jceasettitle: Some old preprocessors have problem with "#define" not in the first colum -> Some old preprocessors have problem with "#define" not in the first column
2011-11-27 04:15:31jceacreate