Closes issue #13488: Some old preprocessors have problem with #define not in the first column